<resources>
    <string name="app_name">Volnet</string>
    <string name="add_teams">Add Teams</string>
    <string name="add_team_logo">add_team_logo</string>
    <string name="delete_player">delete the player</string>
    <string name="player_icon">add player icon</string>

    <!-- create_match -->
    <!-- Toolbar -->
    <string name="create_match_app">Create Match</string>
    <string name="back">back</string>

    <!-- Match Information -->
    <string name="match_information">Match Information</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>

    <!-- Teams -->
    <string name="teams">Teams</string>
    <string name="team1">ADD Team 1</string>
    <string name="team2">ADD Team 2</string>
    <string name="vs">VS</string>

    <!-- Match Rules -->
    <string name="match_rules">MATCH RULES</string>
    <string name="rule_best_of">• Best of 5 sets</string>
    <string name="rule_points_set">• Points to win set: 25</string>
    <string name="rule_points_tiebreak">• Points to win tie break: 15</string>

    <!-- Buttons -->
    <string name="create_match">Create match</string>

    <!-- Bottom Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_history">History</string>


    <!-- Team Scoring Activity -->

    <string name="team_scoring_app_name">Team Scoring</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="take_timeout">Take Timeout(%1$d)</string>
    <string name="take_timeout_default">Take Timeout</string>
    <string name="next_set">Next Set</string>
    <string name="team_a_logo">Team logo</string>
    <string name="team_b_logo">Team logo</string>
    <string name="team_scoring">TEAM SCORING</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>


    <string name="timeout_team_a">Timeout(2)</string>
    <string name="timeout_team_b">Timeout(2)</string>

    <string name="end_match">End Match</string>
        <string name="history_icon">History Icon</string>
        <string name="history_title">HISTORY</string>
        <string name="search_hint">Search...</string>
        <string name="sort_label">Sort</string>
        <string name="sort">Sort</string>


        <string name="rules_icon">Rules Icon</string>
        <string name="rules_title">RULES</string>
        <string name="default_label">DEFAULT</string>
        <string name="default_rules">
            <string name="rule_best_of">• Best of 5 sets</string>
        <string name="rule_points_set">• Points to win set: 25</string>
        <string name="rule_points_tiebreak">• Points to win tie break: 15</string>

    </string>
        <string name="close">Close</string>
        <string name="confirm_delete_title">Are you sure?</string>
        <string name="delete">Delete</string>
        <string name="cancel">Cancel</string>
    <string name="team_a_winner">Team A Winner</string>
    <string name="team_b_winner">Team B Winner</string>

    <string name="vs_text">VS</string>
    <string name="delete_match">Delete Match</string>
    <string name="more_options">More Options</string>
    <string name="trophy_icon">Trophy Icon</string>
    <string name="export">EXPORT</string>



</resources>

