<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/red"
        android:padding="10dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_match_app"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Match Information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_information"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/date"
            android:drawableEnd="@drawable/date"
            android:inputType="date" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/time"
            android:drawableEnd="@drawable/time"
            android:inputType="time"/>
    </LinearLayout>

    <!-- Teams -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/team1"
            android:backgroundTint="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/vs"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/team2"
            android:backgroundTint="@color/darkGray" />
    </LinearLayout>

    <!-- Match Rules -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_rules"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/darkGray"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_rules"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/textBlack"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp" />

    <!-- Create Match Button -->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box_background"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_best_of"
            android:textColor="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_points_set"
            android:textColor="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_points_tiebreak"
            android:textColor="@color/darkGray" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightGray"
        android:enabled="false"
        android:layout_marginTop="40dp"
        android:text="@string/create_match"
        android:textColor="@color/textGray"
        android:textSize="16sp"/>

    <!--    &lt;!&ndash; Bottom Navigation &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="space-around|center"-->
<!--        android:background="#FFFFFF">-->

<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:src="@android:drawable/ic_menu_view" />-->
<!--            <TextView-->
<!--                android:text="Home"-->
<!--                android:textSize="10sp" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:src="@android:drawable/ic_menu_agenda" />-->
<!--            <TextView-->
<!--                android:text="Matches"-->
<!--                android:textSize="10sp" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:src="@android:drawable/ic_menu_my_places" />-->
<!--            <TextView-->
<!--                android:text="Teams"-->
<!--                android:textSize="10sp" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:src="@android:drawable/ic_menu_recent_history" />-->
<!--            <TextView-->
<!--                android:text="History"-->
<!--                android:textSize="10sp" />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

</LinearLayout>
